--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
     </style>
 </head>
 
-<body>
+<body ng-controller="ProxyController">
     <div class="container">
         <div class="row">
             <div class="col s12">
