--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,12 +41,12 @@
             <div class="col s12">
                 <div class="card">
                     <div class="card-content red-text">
-                        <span class="card-title">Enter a website URL ...</span>
+                        <span class="card-title">Enter a youtube video ID ...</span>
                         <form ng-submit="go()">
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input ng-model="url" id="url" type="text" class="validate" required>
-                                    <label for="url">URL</label>
+                                    <input ng-model="yt" id="yt" type="text" class="validate" required>
+                                    <label for="yt">Video</label>
                                 </div>
                             </div>
                             <div class="row">
