--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,24 +39,26 @@
 </head>
 
 <body ng-controller="ProxyController">
-    <div class="container main-container valign-wrapper">
-        <div class="row valign">
-            <div class="col s12">
-                <div class="card">
-                    <div class="card-content red-text">
-                        <form ng-submit="go()">
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input ng-model="yt" id="yt" type="text" class="validate" required>
-                                    <label for="yt">Video ID</label>
+    <div class="container">
+        <div class="main-container valign-wrapper">
+            <div class="row valign">
+                <div class="col s12">
+                    <div class="card">
+                        <div class="card-content red-text">
+                            <form ng-submit="go()">
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <input ng-model="yt" id="yt" type="text" class="validate" required>
+                                        <label for="yt">Video ID</label>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <button type="submit" class="waves-effect waves-light btn red">Go</button>
+                                <div class="row">
+                                    <div class="input-field col s12">
+                                        <button type="submit" class="waves-effect waves-light btn red">Go</button>
+                                    </div>
                                 </div>
-                            </div>
-                        </form>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
