--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <title>Khan Academy</title>
 
     <!-- Favicon -->
-    <!-- link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" -->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -40,7 +40,7 @@
 
 <body ng-controller="ProxyController">
     <div class="container main-container valign-wrapper">
-        <div class="row valign center" style="width: 100%">
+        <div class="row valign" style="width: 100%">
             <div class="col s12">
                 <div class="card">
                     <div class="card-content red-text">
