--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title -->
-    <title>Khan Academy</title>
+    <title>Video Player</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -49,6 +49,7 @@
             <div class="col s12" ng-hide="loading">
                 <div class="card">
                     <div class="card-content red-text">
+                        <span class="card-title">YouTube</span>
                         <form ng-submit="view()">
                             <div class="row">
                                 <div class="input-field col s12">
@@ -62,6 +63,12 @@
                                 </div>
                             </div>
                         </form>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-content red-text">
+                        <span class="card-title">History</span>
+                        <li ng-repeat="historyItem in history">{{historyItem.id}} - {{historyItem.title}}</li>
                     </div>
                 </div>
             </div>
