Download angular-cookies

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,7 @@
 
     <!-- Angular -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-cookies.min.js"></script>
     <script src="/static/js/app.js"></script>
 
     <style>
