--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,8 +41,8 @@
 
 <body ng-controller="ProxyController">
     <div class="container main-container valign-wrapper">
-        <div class="row valign" style="width: 100%">
-            <div class="col s12" ng-show="loading">
+        <div class="row" style="width: 100%">
+            <div class="col s12 valign" ng-show="loading">
                 <div class="progress">
                     <div class="indeterminate"></div>
                 </div>
