Remove bullets from history

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title -->
-    <title>Video Player</title>
+    <title>YouTube Audio/Video Player</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -38,6 +38,10 @@
 
         body {
             background-color: whitesmoke;
+        }
+
+        ul {
+            list-style-type: none;
         }
     </style>
 </head>
