Errant HTML close tag

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -109,7 +109,7 @@
                                             <tr>Video Title</tr>
                                         </th>
                                     </thead>
-                                    </tbody>
+                                    <tbody>
                                         <td ng-repeat="historyItem in history">
                                             <tr>{{historyItem.id}}</tr>
                                             <tr>{{historyItem.title}}</tr>
