Fix table headers

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title -->
-    <title>YouTube Audio/Video Player</title>
+    <title>YouTube Video Player</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -104,10 +104,10 @@
                             <div class="col s12">
                                 <table>
                                     <thead>
-                                        <th>
-                                            <td>Video ID</td>
-                                            <td>Video Title</td>
-                                        </th>
+                                        <tr>
+                                            <th>Video ID</th>
+                                            <th>Video Title</th>
+                                        </tr>
                                     </thead>
                                     <tbody>
                                         <tr ng-repeat="historyItem in history">
